# binbot

./: .env.example  .gitignore  AUGMENT_HINTS.md  BinBot — Technical Specification.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_PLAN.md  MARKDOWN_RENDERING.md  README.md  UI_WIREFRAME.md  api_schemas.py  app.py  config.yaml  docker-compose.yml  image_optimization_recommendations.md  main.py  performance_results.json  pyproject.toml  requirements.txt  run_cli.py  run_dev.py  run_prod.py  simple_test.py  start.sh  start_server.py  test_api_simple.py  test_basic_refactor.py  test_bin_query.py  test_bin_update.html  test_camera_complete_workflow.html  test_camera_first_behavior.html  test_camera_permissions.html  test_camera_preview.html  test_chat_api_sequence.py  test_complete_flow.py  test_complete_image_decision.py  test_comprehensive_functionality.py  test_current_bin_update.py  test_current_vs_improved.py  test_embedding_debug.py  (+27 more)
api/: add.py  bulk.py  chat.py  context.py  health.py  images.py  inventory.py  move.py  nlp.py  remove.py  search.py  session.py  test.py  tts.py  voice.py
chat/: function_definitions.py  function_wrappers.py
config/: embeddings.py  settings.py
database/: chromadb_client.py
frontend/: App.tsx  README.md  WEB_README.md  app.js  cli.py  index.html  main.html  metadata.json  package-lock.json  package.json  style.css  types.ts
llm/: client.py  embeddings.py  prompts.py  vision.py
nlp/: command_parser.py  command_processor.py  conversation_manager.py  function_command_processor.py  function_definitions.py  function_handler.py
(+67 files in other folders)
